<resources>
    <string name="app_name">Ejercicio20201</string>
    <string name="title">Programando android</string>
    <string name="nombre">Ingresa tu nombre:</string>
    <string name="edad">Ingresa tu edad:</string>
    <string name="telefono">Ingresa tu telefono</string>
    <string name="correo">Ingresa tu correo.</string>
    <string name="btnValor">Procesa la información.</string>
</resources>
